--- a/index.html
+++ b/index.html
@@ -561,9 +561,7 @@
                     <!-- Carousel End -->
 
                   </div>
-                <div class="modal-footer">
-                Evan spent several days in London with friends exploring the city and ... akd;fa ;kldjf a;kldj fkj fdka;lk kda;fk a;kd fa;kldfj a; jfka;dskfj a;djfa;kdf;alkdf a;kld;f.
-                </div>
+                <div class="modal-footer">Evan spent several days in London with friends exploring the city and major sights including Tower Bridge, Buckingham Palace, Big Ben and the London Eye. But she mostly she ate her way across the city, visiting everywhere from Chinatown to Borough Market to Harrods.</div>
               </div>
             </div>
           </div>
@@ -596,27 +594,26 @@
                           <li data-target="#carousel-example-generic-8" data-slide-to="0" class="active"></li>
                           <li data-target="#carousel-example-generic-8" data-slide-to="1"></li>
                           <li data-target="#carousel-example-generic-8" data-slide-to="2"></li>
+                          <li data-target="#carousel-example-generic-8" data-slide-to="3"></li>
+                          <li data-target="#carousel-example-generic-8" data-slide-to="4"></li>
                         </ol>
 
                       <!-- Wrapper for slides -->
                         <div class="carousel-inner" role="listbox">
                           <div class="item active">
-                            <img src="http://placehold.it/350x150" alt="Placehold8001">
-                              <div class="carousel-caption">
-                              8001
-                              </div>
+                            <img src="http://i.imgur.com/oXC7IaS.jpg" alt="Ireland-1">
                           </div>
                           <div class="item">
-                            <img src="http://placehold.it/350x150" alt="Placehold8002">
-                              <div class="carousel-caption">
-                              8002
-                              </div>
+                            <img src="http://i.imgur.com/bjupv3Z.jpg" alt="Ireland-2">
                           </div>
                           <div class="item">
-                            <img src="http://placehold.it/350x150" alt="Placehold8003">
-                              <div class="carousel-caption">
-                              8003
-                              </div>
+                            <img src="http://i.imgur.com/NMqpCTx.jpg" alt="Ireland-3">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/YTSI2zl.jpg" alt="Ireland-4">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/8w72oVF.jpg" alt="Ireland-5">
                           </div>
                         </div>
 
@@ -633,9 +630,7 @@
                     <!-- Carousel End -->
 
                   </div>
-                <div class="modal-footer">
-                While in Ireland, Evan ventured not only to Dublin but also to Howth, which is a little town outside of Dublin. It was perfect for a 10K hike complete with beautiful views of the coast. jkda; fjkd f;a kjdf; a;lkd fak;djf k;ajdkfa ;lsdkfj a;kldsj f.
-                </div>
+                <div class="modal-footer">While in Ireland, Evan ventured not only to Dublin to see the sights but also to Howth, which is a little town outside of Dublin. It was perfect for a 10K hike complete with beautiful views of the coast.</div>
               </div>
             </div>
           </div>
@@ -672,27 +667,34 @@
                           <li data-target="#carousel-example-generic-9" data-slide-to="0" class="active"></li>
                           <li data-target="#carousel-example-generic-9" data-slide-to="1"></li>
                           <li data-target="#carousel-example-generic-9" data-slide-to="2"></li>
+                          <li data-target="#carousel-example-generic-9" data-slide-to="3"></li>
+                          <li data-target="#carousel-example-generic-9" data-slide-to="4"></li>
+                          <li data-target="#carousel-example-generic-9" data-slide-to="5"></li>
+                          <li data-target="#carousel-example-generic-9" data-slide-to="6"></li>
                         </ol>
 
                       <!-- Wrapper for slides -->
                         <div class="carousel-inner" role="listbox">
                           <div class="item active">
-                            <img src="http://placehold.it/350x150" alt="Placehold9001">
-                              <div class="carousel-caption">
-                              9001
-                              </div>
+                            <img src="http://i.imgur.com/RpRBiTe.jpg" alt="Switzerland-1">
                           </div>
                           <div class="item">
-                            <img src="http://placehold.it/350x150" alt="Placehold9002">
-                              <div class="carousel-caption">
-                              9002
-                              </div>
+                            <img src="http://i.imgur.com/h48l7Dp.jpg" alt="Switzerland-2">
                           </div>
                           <div class="item">
-                            <img src="http://placehold.it/350x150" alt="Placehold9003">
-                              <div class="carousel-caption">
-                              9003
-                              </div>
+                            <img src="http://i.imgur.com/eoAyLL3.jpg" alt="Switzerland-3">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/3TOucN3.jpg" alt="Switzerland-4">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/S7hyxDU.jpg" alt="Switzerland-5">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/WzyYPI3.jpg" alt="Switzerland-6">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/ixsYlUJ.jpg" alt="Switzerland-7">
                           </div>
                         </div>
 
@@ -709,9 +711,7 @@
                     <!-- Carousel End -->
 
                   </div>
-                <div class="modal-footer">
-                While in Switzerland, Evan ventured to both Zurich and the beautiful Lucerne.... kd;afka;k kjda;f kda; fdka;f jdka; fkda;dkf a;lsdkjf a;kdjf ;askldjfa;kfj a;skdjf;akjf ;akjdf.
-                </div>
+                <div class="modal-footer">While in Switzerland, Evan ventured to both Zurich and the beautiful Lucerne. In Lucerne, Evan and her friends hiked Mount Pilatus in the Swiss Alps and hung out alongside the scenic Lake Lucerne.</div>
               </div>
             </div>
           </div>
@@ -744,27 +744,50 @@
                           <li data-target="#carousel-example-generic-10" data-slide-to="0" class="active"></li>
                           <li data-target="#carousel-example-generic-10" data-slide-to="1"></li>
                           <li data-target="#carousel-example-generic-10" data-slide-to="2"></li>
+                          <li data-target="#carousel-example-generic-10" data-slide-to="3"></li>
+                          <li data-target="#carousel-example-generic-10" data-slide-to="4"></li>
+                          <li data-target="#carousel-example-generic-10" data-slide-to="5"></li>
+                          <li data-target="#carousel-example-generic-10" data-slide-to="6"></li>
+                          <li data-target="#carousel-example-generic-10" data-slide-to="7"></li>
+                          <li data-target="#carousel-example-generic-10" data-slide-to="8"></li>
+                          <li data-target="#carousel-example-generic-10" data-slide-to="9"></li>
+                          <li data-target="#carousel-example-generic-10" data-slide-to="10"></li>
                         </ol>
 
                       <!-- Wrapper for slides -->
                         <div class="carousel-inner" role="listbox">
                           <div class="item active">
-                            <img src="http://placehold.it/350x150" alt="Placehold10001">
-                              <div class="carousel-caption">
-                              10001
-                              </div>
+                            <img src="http://i.imgur.com/262gYMW.jpg" alt="Germany-1">
                           </div>
                           <div class="item">
-                            <img src="http://placehold.it/350x150" alt="Placehold10002">
-                              <div class="carousel-caption">
-                              10002
-                              </div>
+                            <img src="http://i.imgur.com/gWC0UlH.jpg" alt="Germany-2">
                           </div>
                           <div class="item">
-                            <img src="http://placehold.it/350x150" alt="Placehold10003">
-                              <div class="carousel-caption">
-                              10003
-                              </div>
+                            <img src="http://i.imgur.com/S1GGIR9.jpg" alt="Germany-3">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/yXT2UpH.jpg" alt="Germany-4">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/5bql33w.jpg" alt="Germany-5">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/yelf3QT.jpg" alt="Germany-6">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/QRu7ZaC.jpg" alt="Germany-7">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/8PW78cj.jpg" alt="Germany-8">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/BI4vgPj.jpg" alt="Germany-9">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/KiQzOuK.jpg" alt="Germany-10">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/JD0oU08.jpg" alt="Germany-11">
                           </div>
                         </div>
 
@@ -781,9 +804,7 @@
                     <!-- Carousel End -->
 
                   </div>
-                <div class="modal-footer">
-                Evan took two separate trips to Germany. First, she went to historic Berlin. On her second trip, she visited Munich and the famous Neuschwanstein Castle outside of Munich in Schwangau. djk;a fka fkd;a fdk;a fjkd;a fkldaf;ja fa;lkdj fa;kjd fakjdf a;kldsfj fjkd;a.
-                </div>
+                <div class="modal-footer">Evan took two separate trips to Germany. First, she went to historic Berlin to see Checkpoint Charlie, the Brandenburg Tor and the Reichstag and to grow her understanding of the Holocaust. On her second trip, she visited Munich, the famous Neuschwanstein Castle outside of Munich in Schwangau and the Dachau Concentration Camp. And, of course, she got to experience the famous Hippodrome in Munich during Springfest.</div>
               </div>
             </div>
           </div>
@@ -816,27 +837,34 @@
                           <li data-target="#carousel-example-generic-11" data-slide-to="0" class="active"></li>
                           <li data-target="#carousel-example-generic-11" data-slide-to="1"></li>
                           <li data-target="#carousel-example-generic-11" data-slide-to="2"></li>
+                          <li data-target="#carousel-example-generic-11" data-slide-to="3"></li>
+                          <li data-target="#carousel-example-generic-11" data-slide-to="4"></li>
+                          <li data-target="#carousel-example-generic-11" data-slide-to="5"></li>
+                          <li data-target="#carousel-example-generic-11" data-slide-to="6"></li>
                         </ol>
 
                       <!-- Wrapper for slides -->
                         <div class="carousel-inner" role="listbox">
                           <div class="item active">
-                            <img src="http://placehold.it/350x150" alt="Placehold11001">
-                              <div class="carousel-caption">
-                              11001
-                              </div>
+                            <img src="http://i.imgur.com/uGFJtdj.jpg" alt="Austria-1">
                           </div>
                           <div class="item">
-                            <img src="http://placehold.it/350x150" alt="Placehold11002">
-                              <div class="carousel-caption">
-                              11002
-                              </div>
+                            <img src="http://i.imgur.com/HwB89wg.jpg" alt="Austria-2">
                           </div>
                           <div class="item">
-                            <img src="http://placehold.it/350x150" alt="Placehold11003">
-                              <div class="carousel-caption">
-                              11003
-                              </div>
+                            <img src="http://i.imgur.com/mQxvaq2.jpg" alt="Austria-3">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/l1po7Dn.jpg" alt="Austria-4">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/ypYF00k.jpg" alt="Austria-5">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/IdxY56W.jpg" alt="Austria-6">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/1z60qN2.jpg" alt="Austria-7">
                           </div>
                         </div>
 
@@ -853,9 +881,7 @@
                     <!-- Carousel End -->
 
                   </div>
-                <div class="modal-footer">
-                While in Austria, Evan went from Salzburg, where she took a bike tour of the city, to Vienna. kd;akf  jfka;  jfkd;a fk adj f;alkd f.
-                </div>
+                <div class="modal-footer">While in Austria, Evan traveled from Salzburg and Halstatt to Vienna. She drove with her friends on the Austrian autobahn to see the lake district, and UNESCO World Heritage Site, in Halstatt. They took a bike tour across Salzburg, and she sat in coffee shops in Vienna.</div>
               </div>
             </div>
           </div>
@@ -893,22 +919,16 @@
                       <!-- Wrapper for slides -->
                         <div class="carousel-inner" role="listbox">
                           <div class="item active">
-                            <img src="http://placehold.it/350x150" alt="Placehold12001">
-                              <div class="carousel-caption">
-                              12001
-                              </div>
+                            <img src="" alt="Czech-Republic-1">
                           </div>
                           <div class="item">
-                            <img src="http://placehold.it/350x150" alt="Placehold12002">
-                              <div class="carousel-caption">
-                              12002
-                              </div>
+                            <img src="" alt="Czech-Republic-2">
                           </div>
                           <div class="item">
-                            <img src="http://placehold.it/350x150" alt="Placehold12003">
-                              <div class="carousel-caption">
-                              12003
-                              </div>
+                            <img src="" alt="Czech-Republic-3">
+                          </div>
+                          <div class="item">
+                            <img src="" alt="Czech-Republic-3">
                           </div>
                         </div>
 
