--- a/index.html
+++ b/index.html
@@ -914,21 +914,30 @@
                           <li data-target="#carousel-example-generic-12" data-slide-to="0" class="active"></li>
                           <li data-target="#carousel-example-generic-12" data-slide-to="1"></li>
                           <li data-target="#carousel-example-generic-12" data-slide-to="2"></li>
+                          <li data-target="#carousel-example-generic-12" data-slide-to="3"></li>
+                          <li data-target="#carousel-example-generic-12" data-slide-to="4"></li>
+                          <li data-target="#carousel-example-generic-12" data-slide-to="5"></li>
                         </ol>
 
                       <!-- Wrapper for slides -->
                         <div class="carousel-inner" role="listbox">
                           <div class="item active">
-                            <img src="" alt="Czech-Republic-1">
+                            <img src="http://i.imgur.com/nQvl1p7.jpg" alt="Czech-Republic-1">
                           </div>
                           <div class="item">
-                            <img src="" alt="Czech-Republic-2">
+                            <img src="http://i.imgur.com/33j0Ms4.jpg" alt="Czech-Republic-2">
                           </div>
                           <div class="item">
-                            <img src="" alt="Czech-Republic-3">
+                            <img src="http://i.imgur.com/i4yeBsm.jpg" alt="Czech-Republic-3">
                           </div>
                           <div class="item">
-                            <img src="" alt="Czech-Republic-3">
+                            <img src="http://i.imgur.com/2KhMSn3.jpg" alt="Czech-Republic-4">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/DBdmb4U.jpg" alt="Czech-Republic-5">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/yYsslDk.jpg" alt="Czech-Republic-6">
                           </div>
                         </div>
 
@@ -945,9 +954,7 @@
                     <!-- Carousel End -->
 
                   </div>
-                <div class="modal-footer">
-                In the Czech Republic, Evan went to Prague and Kutna Hora... ajk;dkfaj ;skdl jka;l djklaf skadl;fj alk; fjdkla; fldkafj dak;dk.
-                </div>
+                <div class="modal-footer">In the Czech Republic, Evan went to Prague to see the sights, and she ventured outside the city to Kutna Hora and the Terezin Concentration Camp.</div>
               </div>
             </div>
           </div>
