--- a/bookings.html
+++ b/bookings.html
@@ -45,6 +45,9 @@
 
 <div class="container">
   <h1>Bookings</h1>
+  <p>Interested in scheduling a booking with EH Photography? We are available for events and commissioned landscape shoots. Check our calendar below for our availability. Send us an <a href="mailto:erhindes@gmail.com?subject=Booking with EH Photography!" target="_top">email</a> to learn more, or fill out the form below!</p>
+
+  <p><iframe src="https://www.google.com/calendar/embed?height=450&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=erhindes%40gmail.com&amp;color=%2328754E&amp;ctz=America%2FChicago" style=" border-width:0 " width="600" height="450" frameborder="0" scrolling="no"></iframe></p>
 
 </div>
 <!--About End-->
