--- a/index.html
+++ b/index.html
@@ -141,27 +141,74 @@
                           <li data-target="#carousel-example-generic-2" data-slide-to="0" class="active"></li>
                           <li data-target="#carousel-example-generic-2" data-slide-to="1"></li>
                           <li data-target="#carousel-example-generic-2" data-slide-to="2"></li>
+                          <li data-target="#carousel-example-generic-2" data-slide-to="3"></li>
+                          <li data-target="#carousel-example-generic-2" data-slide-to="4"></li>
+                          <li data-target="#carousel-example-generic-2" data-slide-to="5"></li>
+                          <li data-target="#carousel-example-generic-2" data-slide-to="6"></li>
+                          <li data-target="#carousel-example-generic-2" data-slide-to="7"></li>
+                          <li data-target="#carousel-example-generic-2" data-slide-to="8"></li>
+                          <li data-target="#carousel-example-generic-2" data-slide-to="9"></li>
+                          <li data-target="#carousel-example-generic-2" data-slide-to="10"></li>
+                          <li data-target="#carousel-example-generic-2" data-slide-to="11"></li>
+                          <li data-target="#carousel-example-generic-2" data-slide-to="12"></li>
+                          <li data-target="#carousel-example-generic-2" data-slide-to="13"></li>
+                          <li data-target="#carousel-example-generic-2" data-slide-to="14"></li>
+                          <li data-target="#carousel-example-generic-2" data-slide-to="15"></li>
+                          <li data-target="#carousel-example-generic-2" data-slide-to="16"></li>
                         </ol>
 
                       <!-- Wrapper for slides -->
                         <div class="carousel-inner" role="listbox">
                           <div class="item active">
-                            <img src="http://placehold.it/350x150" alt="Placehold2001">
-                              <div class="carousel-caption">
-                              2001
-                              </div>
+                            <img src="http://i.imgur.com/h6H8xMI.jpg" alt="Spain-1">
                           </div>
                           <div class="item">
-                            <img src="http://placehold.it/350x150" alt="Placehold2002">
-                              <div class="carousel-caption">
-                              2002
-                              </div>
+                            <img src="http://i.imgur.com/60cxENy.jpg" alt="Spain-2">
                           </div>
                           <div class="item">
-                            <img src="http://placehold.it/350x150" alt="Placehold2003">
-                              <div class="carousel-caption">
-                              2003
-                              </div>
+                            <img src="http://i.imgur.com/4CxFzUG.jpg" alt="Spain-3">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/gWlwmn9.jpg" alt="Spain-4">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/hvDLAKr.jpg" alt="Spain-5">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/dDYYCCR.jpg" alt="Spain-6">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/ObknKRA.jpg" alt="Spain-7">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/3BnYXRu.jpg" alt="Spain-8">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/bLHp7fK.jpg" alt="Spain-9">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/QdUJXUH.jpg" alt="Spain-10">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/q6n3IlP.jpg" alt="Spain-11">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/UUnrLB6.jpg" alt="Spain-12">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/VXnmiXy.jpg" alt="Spain-13">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/Kv6UDjq.jpg" alt="Spain-14">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/36ylJq3.jpg" alt="Spain-15">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/PTvGOpk.jpg" alt="Spain-16">
+                          </div>
+                          <div class="item">
+                            <img src="http://i.imgur.com/hH8e2Wt.jpg" alt="Spain-17">
                           </div>
                         </div>
 
@@ -178,8 +225,7 @@
                     <!-- Carousel End -->
 
                   </div>
-                <div class="modal-footer">Evan lived and studied in the heart of Madrid, Spain for five months. During her time living in the country, she traveled all over. First, she stayed in Seville for two weeks, and she went on to explore, Granada, Toledo, Cercedilla, Barcelona and Donostia-San Sebastian. dkjadklf;  fjdk;as f jdka; fdka j fkda;j fdkaj  jfdka;kdjf akj fdkjalkd  fkd;af djka; f jkdalkf  jfkd;a fjkd a jkd;akl fdkja ; jkd;af dkja f. kd;lakfj;akd fjakl;.
-                </div>
+                <div class="modal-footer">Evan lived and studied in the heart of Madrid, Spain for five months. During her time living in the country, she traveled all over the country. She spent two weeks in the south of Spain in Seville and Granda. Outside of Madrid, Evan toured the former capital Toledo and hiked in Cercedilla. As well, she headed north to visit Donostia-San Sebastian in Basque country and Barcelona in Catalonia.</div>
               </div>
             </div>
           </div>
