--- a/bookings.html
+++ b/bookings.html
@@ -46,9 +46,29 @@
 <div class="container">
   <h1>Bookings</h1>
   <p>Interested in scheduling a booking with EH Photography? We are available for events and commissioned landscape shoots. Check our calendar below for our availability. Send us an <a href="mailto:erhindes@gmail.com?subject=Booking with EH Photography!" target="_top">email</a> to learn more, or fill out the form below!</p>
-
   <p><iframe src="https://www.google.com/calendar/embed?height=450&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=erhindes%40gmail.com&amp;color=%2328754E&amp;ctz=America%2FChicago" style=" border-width:0 " width="600" height="450" frameborder="0" scrolling="no"></iframe></p>
 
+  <p><div id="wufoo-m8u1hrw0ayvx7t">
+    Fill out my <a href="https://ehindes.wufoo.com/forms/m8u1hrw0ayvx7t">online form</a>.
+    </div>
+    <div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;">Online contact and registration forms from <a href="http://www.wufoo.com">Wufoo</a>.</div>
+    <script type="text/javascript">var m8u1hrw0ayvx7t;(function(d, t) {
+    var s = d.createElement(t), options = {
+    'userName':'ehindes',
+    'formHash':'m8u1hrw0ayvx7t',
+    'autoResize':true,
+    'height':'1044',
+    'async':true,
+    'host':'wufoo.com',
+    'header':'show',
+    'ssl':true};
+    s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+    s.onload = s.onreadystatechange = function() {
+    var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+    try { m8u1hrw0ayvx7t = new WufooForm();m8u1hrw0ayvx7t.initialize(options);m8u1hrw0ayvx7t.display(); } catch (e) {}};
+    var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+      })(document, 'script');</script>
+  </p>
 </div>
 <!--About End-->
 
