--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -43,8 +44,6 @@
 
 <!--Photography Start-->     
 <div class="container">
-<div class="introduction">
-  <p1>Explore the world of EH photography. Travel to different countries and cultures across the globe when you click on each of the images below.</p1>
 
   <!--ROW 1 Start-->
   <div class="row">
